Added a new recipe for bbq ribs
Created bbq-ribs.html and added it's link to home.

--- a/recipes-list/lasagna.html
+++ b/recipes-list/lasagna.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" rel="noopener noreferrer">Home</a>
     <h1>Lasagna</h1>
     <img src="/recipes-list/lasagna.webp" alt="lasagna" height="250" width="350">
     <br>
